# oop_exercise_04

./: .gitignore  CMakeLists.txt  report.tex
include/: .#figure.hpp  figure.hpp  functions.hpp  point.hpp  rectangle.hpp  square.hpp  template.hpp  triangle.hpp
src/: functions.cpp  main.cpp
